9-update-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-workshop
spec:
  replicas: 4
  selector:
   matchLabels:
     app: k8s-workshop
  template:
    metadata:
      labels:
        app: k8s-workshop
    spec:
      containers:
        - name: kubernetes-bootcamp
          image: gcr.io/google-samples/kubernetes-bootcamp:v2
          ports:
            - containerPort: 8080
