7-kubernetes-bootcamp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-bootcamp
spec:
  replicas: 2
  selector:
   matchLabels:
     app: kubernetes-bootcamp
  template:
    metadata:
      labels:
        app: kubernetes-bootcamp
    spec:
      containers:
        - name: kubernetes-bootcamp
          image: gcr.io/google-samples/kubernetes-bootcamp:v1
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: kubernetes-bootcamp
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: kubernetes-bootcamp
