7-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-workshop
spec:
  replicas: 2
  selector:
   matchLabels:
     app: k8s-workshop
  template:
    metadata:
      labels:
        app: k8s-workshop
    spec:
      containers:
        - name: kubernetes-bootcamp
          image: gcr.io/google-samples/kubernetes-bootcamp:v1
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: k8s-workshop
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: k8s-workshop
