8-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-workshop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k8s-workshop.local
      http:
        paths:
          - path: /
            backend:
              serviceName: k8s-workshop
              servicePort: 8080
